@@ -2,7 +2,6 @@ package com.foodapp.foodorderingapp.service.order;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.util.Map.Entry;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -11,12 +10,10 @@ import java.util.Optional;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
-import com.foodapp.foodorderingapp.dto.order.OrderLineItemRequest;
-import com.foodapp.foodorderingapp.dto.order.OrderLineItem_GroupOptionRequest;
-import com.foodapp.foodorderingapp.dto.order.OrderRequest;
-import com.foodapp.foodorderingapp.dto.order.OrderResponse;
+import com.foodapp.foodorderingapp.dto.order.*;
 import com.foodapp.foodorderingapp.entity.*;
 import com.foodapp.foodorderingapp.enumeration.DeliveryStatus;
+import com.foodapp.foodorderingapp.enumeration.DiscountType;
 import com.foodapp.foodorderingapp.enumeration.OrderStatus;
 import com.foodapp.foodorderingapp.exception.DataNotFoundException;
 import com.foodapp.foodorderingapp.mapper.OrderMapper;
@@ -37,76 +34,61 @@ public class OrderServiceIml implements OrderService {
         private final GroupOptionJpaRepository groupOptionJpaRepository;
         private final DishJpaRepository dishJpaRepository;
         private final UserJpaRepository userJpaRepository;
-        private final OrderLineItemGroupOptionJpaRepository orderLineItemGroupOptionJpaRepository;
-        private final OrderLineItemOptionItemJpaRepository orderLineItemOptionItemJpaRepository;
         private final OrderLineItemJpaRepository orderLineItemJpaRepository;
-        private final AddressJpaRepository addressJpaRepository;
         private final VoucherJpaRepository voucherJpaRepository;
         private final RestaurantJpaRepository restaurantJpaRepository;
         private final VoucherApplicationJpaRepository voucherApplicationJpaRepository;
+        private final CartJpaRepository cartJpaRepository;
 
     private Pair<List<OrderLineItem_OptionItem>, BigDecimal> getItemOptions(
-                    OrderLineItem_GroupOptionRequest item_group,
+            CartItem_GroupOption cartItem_groupOption,
                     GroupOption groupOption) {
             AtomicReference<BigDecimal> subTotal = new AtomicReference<>(BigDecimal.ZERO);
-            List<OrderLineItem_OptionItem> item_options = item_group.getOrderLineItem_optionItems().stream()
-                            .map(item_option -> {
-                                    OptionItem optionItem = optionItemJpaRepository
-                                                    .findById(item_option.getOptionItemId()).orElseThrow(
-                                                                    () -> new DataNotFoundException(
-                                                                                    "Not found option item with "
-                                                                                                    + item_option.getOptionItemId()));
-                                    if (!Objects.equals(optionItem.getGroupOption().getId(), groupOption.getId())) {
-                                            throw new IllegalArgumentException("Option item not valid"
-                                                            + item_option.getOptionItemId());
-                                    }
-                                    BigDecimal price = optionItem.getPrice()
-                                                    .multiply(BigDecimal.valueOf(item_option.getQuantity()));
-                                    subTotal.updateAndGet(v -> v.add(price));
-                                    return OrderLineItem_OptionItem.builder()
-                                                    .optionItem(optionItem)
-                                                    .quantity(item_option.getQuantity())
-                                                    .price(price)
-                                                    .build();
-                            }).toList();
-            return Pair.of(item_options, subTotal.get());
+            List<OrderLineItem_OptionItem> lineOptions = cartItem_groupOption.getSelectedOptions().stream()
+                .map(option -> {
+                        OptionItem optionItem = optionItemJpaRepository
+                                        .findById(option).orElseThrow(
+                                                        () -> new DataNotFoundException(
+                                                                        "Not found option item with "
+                                                                                        + option));
+                        if (!Objects.equals(optionItem.getGroupOption().getId(), groupOption.getId())) {
+                                throw new IllegalArgumentException("Option item not valid"
+                                                + option);
+                        }
+                    subTotal.updateAndGet(v -> v.add(optionItem.getPrice()));
+                    return OrderLineItem_OptionItem.builder()
+                            .optionId(optionItem.getId())
+                            .optionName(optionItem.getName())
+                            .price(optionItem.getPrice())
+                            .build();
+                }).toList();
+            return Pair.of(lineOptions, subTotal.get());
     }
 
-    private Pair<List<OrderLineItem_GroupOption>, BigDecimal> getItemGroups(OrderLineItemRequest itemRequest,
-                    OrderLineItem item) {
-            AtomicReference<BigDecimal> itemOptionPrice = new AtomicReference<>(BigDecimal.ZERO);
-            List<OrderLineItem_GroupOption> item_groups = itemRequest.getOrderLineItemGroupOptionRequests().stream()
-                            .map(item_group -> {
-                                    GroupOption groupOption = groupOptionJpaRepository
-                                                    .findById(item_group.getGroupOptionId())
-                                                    .orElseThrow(() -> new DataNotFoundException(
-                                                                    "Not found group option with " + item_group
-                                                                                    .getGroupOptionId()));
-                                    Pair<List<OrderLineItem_OptionItem>, BigDecimal> res = getItemOptions(
-                                                    item_group, groupOption);
-                                    itemOptionPrice.updateAndGet(x -> x.add(res.getSecond()));
-                                    OrderLineItem_GroupOption orderLineItem_GroupOption = OrderLineItem_GroupOption
-                                                    .builder()
-                                                    .groupOption(groupOption)
-                                                    .orderLineItemOptions(res.getFirst())
-                                                    .groupOptionSubtotal(res.getSecond())
-                                                    .orderLineItem(item)
-                                                    .build();
-                                    OrderLineItem_GroupOption orderLineItem_GroupOptionData = orderLineItemGroupOptionJpaRepository
-                                                    .save(orderLineItem_GroupOption);
-                                    res.getFirst().stream().forEach(option_item -> {
-                                            option_item.setOrderLineItem_GroupOption(orderLineItem_GroupOptionData);
-                                            orderLineItemOptionItemJpaRepository.save(option_item);
-                                    });
-
-                                    return OrderLineItem_GroupOption.builder()
-                                                    .groupOption(groupOption)
-                                                    .orderLineItemOptions(res.getFirst())
-                                                    .groupOptionSubtotal(res.getSecond())
-                                                    .build();
-                            }).toList();
-
-            return Pair.of(item_groups, itemOptionPrice.get());
+    private OrderLineItem_GroupOptionList getItemGroups(CartItem_GroupOptionList cart_groups,
+                                                                                OrderLineItem item) {
+            AtomicReference<BigDecimal> price = new AtomicReference<>(BigDecimal.ZERO);
+            List<OrderLineItem_GroupOption> groups = cart_groups.getSelectedOptions().stream()
+                .map(group -> {
+                        GroupOption groupOption = groupOptionJpaRepository
+                            .findById(group.getGroupOptionId())
+                            .orElseThrow(() -> new DataNotFoundException(
+                                            "Not found group option with " + group
+                                                            .getGroupOptionId()));
+                        Pair<List<OrderLineItem_OptionItem>, BigDecimal> res = getItemOptions(
+                                        group, groupOption);
+                        price.updateAndGet(x -> x.add(res.getSecond()));
+                        return OrderLineItem_GroupOption
+                                .builder()
+                                .groupOptionId(groupOption.getId())
+                                .selectedOptions(res.getFirst())
+                                .groupOptionName(groupOption.getName())
+                                .build();
+                }).toList();
+            return OrderLineItem_GroupOptionList.builder()
+                    .groups(groups)
+                    .price(price.get())
+                    .build();
     }
 
     @Transactional
@@ -122,6 +104,7 @@ public class OrderServiceIml implements OrderService {
                             .orderStatus(orderRequest.getOrderStatus())
                             .deliveryStatus(DeliveryStatus.PENDING)
                             .address(orderRequest.getAddress())
+
                             .build();
 //        @Transactional
 //        @Override
@@ -151,46 +134,41 @@ public class OrderServiceIml implements OrderService {
                     voucherApplicationJpaRepository.save(voucherApplication);
             });
             AtomicReference<BigDecimal> totalPrice = new AtomicReference<>(BigDecimal.ZERO);
-            List<OrderLineItem> orderLineItems = orderRequest.getOrderItemRequests().stream().map(itemRequest -> {
-                    Dish dish = dishJpaRepository.findById(itemRequest.getDishId())
-                                    .orElseThrow(() -> new DataNotFoundException(
-                                                    "Not found dish with id " + itemRequest.getDishId()));
+            List<OrderLineItem> orderLineItems = orderRequest.getCartItemIds().stream().map(id -> {
+                    CartItem cartItem = cartJpaRepository.findById(id).orElseThrow(
+                            () -> new DataNotFoundException("Not found cart with id" + id)
+                    );
                     OrderLineItem orderLineItem = OrderLineItem
                                     .builder()
-                                    .dish(dish)
-                                    .quantity(itemRequest.getQuantity())
+                                    .dish(cartItem.getDish())
+                                    .quantity(cartItem.getQuantity())
                                     .order(orderData)
                                     .build();
                     OrderLineItem item = orderLineItemJpaRepository.save(orderLineItem);
-                    Pair<List<OrderLineItem_GroupOption>, BigDecimal> res = getItemGroups(itemRequest, item);
-                    // orderLineItem.setOrderLineItemGroupOptions(res.getFirst());
-                    BigDecimal subTotal = (res.getSecond())
-                                    .multiply(BigDecimal.valueOf(itemRequest.getQuantity()));
+                    OrderLineItem_GroupOptionList itemGroups = getItemGroups(cartItem.getOptions(), item);
+                     orderLineItem.setOptions(itemGroups);
+                    BigDecimal subTotal = (itemGroups.getPrice())
+                                    .multiply(BigDecimal.valueOf(cartItem.getQuantity())).add(cartItem.getDish().getPrice().multiply(BigDecimal.valueOf(cartItem.getQuantity())));
                     totalPrice.updateAndGet(x -> x.add(subTotal)
-                                    .add(dish.getPrice().multiply(BigDecimal.valueOf(itemRequest.getQuantity()))));
+                                    );
                     item.setSubTotal(subTotal);
-                    return orderLineItem;
-            }).toList();
+                    return orderLineItemJpaRepository.save(item);
+            }).collect(Collectors.toList());;
+            vouchers.forEach(voucher -> {
+                    ProductDiscount discount = voucher.getProductDiscount();
+                    BigDecimal discountValue = BigDecimal.valueOf(discount.getDiscountValue());
+                    if (discount.getDiscountType() == DiscountType.PERCENTAGE) {
+                            totalPrice.updateAndGet(x -> x.multiply(BigDecimal.valueOf(1)
+                                            .subtract(discountValue.divide(BigDecimal.valueOf(100), 2,
+                                                            RoundingMode.HALF_UP))));
+                    } else {
+                            totalPrice.updateAndGet(x -> x.subtract(discountValue));
+                    }
+            });
+            orderData.setItems(orderLineItems);
+            orderData.setPrice(totalPrice.get());
 
-            if (orderRequest.getTotalPrice().compareTo(totalPrice.get()) != 0) {
-                    throw new IllegalArgumentException("total_price field is not an accurate value"
-                                    + orderRequest.getTotalPrice().toString() + ",," + totalPrice.get());
-            } else {
-                    vouchers.forEach(voucher -> {
-                            ProductDiscount discount = voucher.getProductDiscount();
-                            BigDecimal discountValue = BigDecimal.valueOf(discount.getDiscountValue());
-                            if (discount.getDiscountType().equals("PERCENTAGE")) {
-                                    totalPrice.updateAndGet(x -> x.multiply(BigDecimal.valueOf(1)
-                                                    .subtract(discountValue.divide(BigDecimal.valueOf(100), 2,
-                                                                    RoundingMode.HALF_UP))));
-                            } else {
-                                    totalPrice.updateAndGet(x -> x.subtract(discountValue));
-                            }
-                    });
-                    orderData.setPrice(totalPrice.get());
-
-            }
-            return orderJpaRepository.save(orderData);
+                return orderJpaRepository.save(orderData);
     }
 
     @Override
